INJICERTIFY-1303,Issue Verifiable Credential as JWT using JSON-LD
Signed-off-by: sanehema9 <sanehema9@gmail.com>